Fix: overflow-x: hidden not  working

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ html {
 body {
     scroll-behavior: smooth;
     overflow-y: scroll;
+    overflow-x: hidden;
     height: 100%;
     font-family: raleway, sans-serif;
     margin: 0;
